feat: added custom webhook type config
